# aoc

./: .gitignore  README.md
2019/01/: day01.py
2019/02/: day02.cpp
2019/03/: day03.cpp
2019/03/day03.out.dSYM/Contents/: Info.plist
2019/04/: day04.cpp  day5
2020/: CMakeLists.txt
2020/src/: day01.c  day01.py  day02.py  day03.py
aoc_2023/src/: input_parser.rs  main.rs  solvers.rs
day01/: day01.cpp  day01.out  day01.py
day02/: day02.cpp  day02.out
day03/: day03.cpp  day03.out  makefile  test.cpp  unitTestDay03.cpp
day03/day03.out.dSYM/Contents/Resources/DWARF/: day03.out
